1.71 (XXXX-XX-XX):
  Fixed issue MR-574 - Crash when retrieving RDP session list if eolwtscom.dll is not registered
  Fixed log file not showing operating system version on Windows XP and Windows Server 2003.

1.71 Release Candidate 2 (2013-10-16):
  Fixed issue MR-560 - Cannot Auto-Update With Open Connections: Unable to find an entry point named 'TaskDialogIndirect' in DLL 'ComCtl32'
  Fixed issue MR-565 - Double Folder keep heritage on the initial Folder
  Fixed issue MR-566 - Typo in German UI Automatic Update Settings
  Fixed duplicated folders possibly being named "New Connection" instead of the original folder's name.

1.71 Release Candidate 1 (2013-10-01):
  Fixed issue MR-495 - Having a negative range in port scan creates memory exhaustion.
  Fixed issue MR-514 - Window Proxy test failed without close button
  Fixed issue MR-521 - Right-Clicking in "Sessions" panel crashes mRemoteNG
  Fixed issue MR-525 - Could not start on windows 7 64bit
  Fixed issue MR-535 - SQL error saving Connections
  Fixed issue MR-538 - RDP loses connection when hiding config or connections pane
  Fixed issue MR-542 - Wrapped putty has security flaw
  Made minor improvements to the port scan functionality.
  Fixed possible cross-thread operation exception when loading connections from SQL.
  Fixed PuTTY Saved Sessions not showing after loading a new connections file.
  Updated PuTTY to version 0.63.
  Updated translations.
  Added Chinese (Traditional) translation.
  Added partial Greek and Hungarian translations.

1.71 Beta 5 (2013-06-09):
  Fixed issue MR-491 - Could not start RDP Connection
  Fixed issue MR-499 - TS Gateway is not working in latest release 1.71
  Fixed typo in SQL queries.

1.71 Beta 4 (2013-05-28):
  Added feature MR-435 - Add digital signature check to updater
  Fixed issue MR-255 - The version of the RDP AX client should be updated to 7
  Fixed issue MR-392 - Sessions Panel - context menu entries need to be context aware