@@ -1,6 +1,10 @@
 1.71 (XXXX-XX-XX):
   Fixed issue MR-574 - Crash when retrieving RDP session list if eolwtscom.dll is not registered
+  Fixed issue MR-578 - Connections file is reset
   Fixed log file not showing operating system version on Windows XP and Windows Server 2003.
+  Fixed the wrong connections file opening on startup under certain conditions.
+  Improved error reporting when loading connections files.
+  Removed warning message when mRemoteNG is started for the first time about new connections file being created.
 
 1.71 Release Candidate 2 (2013-10-16):
   Fixed issue MR-560 - Cannot Auto-Update With Open Connections: Unable to find an entry point named 'TaskDialogIndirect' in DLL 'ComCtl32'
